Fix event-tickets spacing and border

--- a/src/resources/postcss/views/full/_single-event.pcss
+++ b/src/resources/postcss/views/full/_single-event.pcss
@@ -165,7 +165,7 @@
 	}
 	
 	&:not(.secondary):before,
-	& ~ div:not(.tribe-events-event-meta) {
+	& ~ div:not(.tribe-events-event-meta, .event-tickets) {
 		border-top: 1px solid var(--color-border-secondary);
 	}
 	
