--- a/src/resources/postcss/views/skeleton/_single-event.pcss
+++ b/src/resources/postcss/views/skeleton/_single-event.pcss
@@ -232,6 +232,10 @@
 			padding-top: 0;
 			position: static;
 		}
+		
+		& + .event-tickets {
+			margin-top: calc(-1 * var(--spacer-6));
+		}
 	}
 	
 	&:not(.secondary):before {
